--- a/src/components/showcase/PageSpeedInsights.astro
+++ b/src/components/showcase/PageSpeedInsights.astro
@@ -14,14 +14,14 @@ import lightHouseScores from "../../images/svg/lighthouseScores.svg";
                     <a
                         rel="noopener noreferrer"
                         target="_blank"
-                        href="https://pagespeed.web.dev/analysis/https-johnsolly-dev/yrajp022nb?form_factor=mobile"
+                        href="https://pagespeed.web.dev/analysis/https-jsolly-com/oc088mkp49?form_factor=mobile"
                     >
-                        JohnSolly.dev PageSpeed Insights
+                        jsolly.com PageSpeed Insights
                     </a>
                 </figcaption>
                 <Image
                     src={lightHouseScores}
-                    alt="Lighthouse scores for JohnSolly.dev: 100 for Performance, Accessibility, Best Practices, and SEO."
+                    alt="Lighthouse scores for jsolly.com: 100 for Performance, Accessibility, Best Practices, and SEO."
                     class="h-40 w-auto mx-auto"
                 />
             </figure>
