--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -105,7 +105,7 @@ import { Image } from "astro:assets";
         </main>
         <footer class="group flex justify-center mt-5 mb-16">
             <a
-                href="https://github.com/jsolly/johnsolly.dev"
+                href="https://github.com/jsolly/jsolly-website"
                 target="_blank"
                 rel="noopener noreferrer"
                 id="github-btn"
