--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,10 +5,10 @@ import LinkCard from "../components/LinkCard.astro";
 
 <Layout
 	title="John Solly's Personal Website"
-	description="Welcome to JohnSolly.dev, the personal website of John Solly. Explore my portfolio, blog, and geospatial consulting services."
+	description="Welcome to jsolly.com, the personal website of John Solly. Explore my portfolio, blog, and geospatial consulting services."
 >
 	<h1 class="text-5xl font-bold leading-none text-center my-8">
-		Welcome to <span class="text-gradient">JohnSolly.dev</span>
+		Welcome to <span class="text-gradient">jsolly.com</span>
 	</h1>
 	<ul class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mb-6">
 		<LinkCard
