--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,7 +1,7 @@
 ---
+import { Image } from "astro:assets";
 import Layout from "../layouts/Layout.astro";
 import ScarecrowImg from "../images/scarecrow.webp";
-import { Image } from "astro:assets";
 ---
 
 <Layout title="404 Not Found" description="Page not found">
@@ -20,13 +20,13 @@ import { Image } from "astro:assets";
       <h1 class="text-5xl font-bold mt-8 tracking-tighter">
         I have bad news for you...
       </h1>
-      <p class="mt-4 text-lg text-custom-gray">
+      <p class="mt-4 text-lg text-text">
         The page you are looking for might be removed or is temporarily
         unavailable
       </p>
     </section>
     <footer class="mt-8">
-      <p class="text-custom-gray text-xs">
+      <p class="text-text text-xs">
         404 page by
         <a
           href="https://github.com/OnlyManu/"
