--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,12 +4,12 @@ import Layout from "../layouts/Layout.astro";
 import { Image } from "astro:assets";
 
 // Static Images
+import blogthedataLogo from "../images/social/blogthedataLogo.webp";
+import githubLogo from "../images/social/githubLogo.svg";
 import jsollyImage from "../images/jsolly.webp";
 import linkedInLogo from "../images/social/linkedinLogo.svg";
 import xLogo from "../images/social/xLogo.svg";
 import youtubeLogo from "../images/social/youtubeLogo.png";
-import githubLogo from "../images/social/githubLogo.svg";
-import blogthedataLogo from "../images/social/blogthedataLogo.webp";
 
 const socialLinks = [
 	{
@@ -50,7 +50,7 @@ const socialLinks = [
     description="John Solly is a Senior Geospatial Software Engineer with over a decade of experience in the geospatial industry. Making apps with maps and data."
 >
     <div
-        class="about-section bg-subtle-dark-overlay-lvl-2 text-custom-gray rounded-lg shadow-lg p-6 mx-auto"
+        class="about-section bg-subtle-dark-overlay-lvl-2 text-text rounded-lg shadow-lg p-6 mx-auto"
     >
         <div class="profile flex flex-col md:flex-row items-center">
             <Image
@@ -61,11 +61,11 @@ const socialLinks = [
             />
             <div>
                 <h1
-                    class="text-2xl font-bold text-custom-offwhite leading-none tracking-tight"
+                    class="text-2xl font-bold text-text leading-none tracking-tight"
                 >
                     John Solly
                 </h1>
-                <p class="text-custom-gray leading-relaxed tracking-wide">
+                <p class="text-text leading-relaxed tracking-wide">
                     Senior Software Engineer, Geospatial Developer
                 </p>
                 <div class="social-links flex mt-3">
