--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -4,9 +4,9 @@
 
 <div
   class="prose dark:prose-invert
-          prose-p:text-custom-gray
+          prose-p:text-text
           prose-p:text-lg
-          prose-headings:text-custom-offwhite
+          prose-headings:text-text
           prose-h2:my-3
           prose-a:text-accent-dark
           prose-a:no-underline
