--- a/src/components/showcase/PageSpeedInsights.astro
+++ b/src/components/showcase/PageSpeedInsights.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from "astro:assets";
 import lightHouseScores from "../../images/svg/lighthouseScores.svg";
 ---
 
@@ -18,9 +19,11 @@ import lightHouseScores from "../../images/svg/lighthouseScores.svg";
                         jsolly.com PageSpeed Insights
                     </a>
                 </figcaption>
-                <img
-                    src={lightHouseScores as unknown as string}
+                <Image
+                    src={lightHouseScores}
                     alt="Lighthouse scores for jsolly.com: 100 for Performance, Accessibility, Best Practices, and SEO."
+                    width={400}
+                    height={160}
                     class="h-40 w-auto mx-auto"
                 />
             </figure>
