--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -4,13 +4,10 @@
 
 <div
   class="prose dark:prose-invert
-          prose-p:text-text
-          prose-p:text-lg
-          prose-headings:text-text
-          prose-h2:my-3
-          prose-a:text-accent-dark
-          prose-a:no-underline
-          mb-4"
+         prose-headings:text-text-primary
+         prose-p:text-text-secondary
+         prose-headings:mt-2 prose-headings:mb-2
+         prose-h1:mt-0"
 >
   <slot />
 </div>
