--- a/src/layouts/MarkdownProjectLayout.astro
+++ b/src/layouts/MarkdownProjectLayout.astro
@@ -10,7 +10,7 @@ const { frontmatter, headings, readingTime } = Astro.props;
 <Layout title={frontmatter.title} description={frontmatter.snippet}>
     <h1 class="text-4xl font-bold leading-tight mb-4">{frontmatter.title}</h1>
 
-    <div class="flex flex-col md:flex-row">
+    <div class="flex flex-col md:flex-row gap-8">
         <div class="flex-grow">
             <div class="max-w-full">
                 <Image
@@ -36,7 +36,7 @@ const { frontmatter, headings, readingTime } = Astro.props;
             <slot />
         </div>
 
-        <aside class="hidden lg:block lg:w-1/4 sticky top-5 h-screen ml-2">
+        <aside class="hidden lg:block lg:w-1/3 sticky top-5 h-screen ml-2">
             <TableOfContents headings={headings} />
         </aside>
     </div>
